@@ -5,7 +5,10 @@ Bug Fixes:
       CLI:
             Some operations were not working with S3 ENVAR creds
             Running perf tests would exit prematurely
-            
+      
+      BUILD: 
+            Fixed bug in Build.java to work with ENVAR's 
+
 Improvements:
 
        Update system uses AWS S3 instead of linux-toys.com
